Fixed and issue with spacing in the footer.

--- a/style.css
+++ b/style.css
@@ -303,5 +303,5 @@ button:hover {
 }
 
 .footer-links p {
-    margin-top: 65px;
+    margin-top: 43px;
 }
